# voice-to-text

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
assembly/: apps.py  forms.py  models.py  urls.py  views.py
assembly/migrations/: 0001_initial.py  0002_uploadedfile_text.py  0003_uploadedfile_status_uploadedfile_transcript_id.py
assembly/templates/: base.html  page.html
assembly/templates/uploads/: convert.html  delete_file.html  file_list.html  upload.html
fileupload/: asgi.py  settings.py  urls.py  wsgi.py
