[tool.poetry]
version = "0.1.0"
name = "FileUploadTranscribeUsingAssemblyAI"
description = "Transcipt audio to tex using assembly AI"
authors = [
    "Mangesh Chavan <31240755+mangeshchavan@users.noreply.github.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
assemblyai = "^0.37.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
#addopts = "--nomigrations"
python_files = ["test_*.py", "*_test.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning",
    "ignore::RuntimeWarning"
]
